--- a/public/index.html
+++ b/public/index.html
@@ -3,62 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Chat</title>
+    <title>Chat App</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-        }
-        #chat-box {
-            width: 50%;
-            height: 300px;
-            border: 1px solid #ccc;
-            overflow-y: scroll;
-            margin: auto;
-            padding: 10px;
-        }
-        input {
-            width: 40%;
-            padding: 10px;
-            margin: 10px;
-        }
-        button {
-            padding: 10px;
-            background-color: blue;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        #user-container { width: 25%; float: left; border-right: 1px solid #ccc; }
+        #chat-container { width: 70%; float: right; }
+        #user-list { list-style: none; padding: 0; }
+        .user-item { cursor: pointer; padding: 10px; border-bottom: 1px solid #ccc; }
+        .user-item:hover { background: #f0f0f0; }
+        #chat-box { height: 300px; border: 1px solid #ccc; overflow-y: scroll; padding: 10px; }
+        input, button { margin: 5px; padding: 10px; }
     </style>
 </head>
 <body>
+    <h2>Chat Application</h2>
+    <div>
+        <input type="text" id="username" placeholder="Enter username">
+        <button onclick="setUsername()">Join</button>
+    </div>
 
-    <h2>Real-Time Chat</h2>
-    <div id="chat-box"></div>
-
-    <input type="text" id="username" placeholder="Enter username">
-    <input type="text" id="message" placeholder="Type a message">
-    <button onclick="sendMessage()">Send</button>
+    <div style="display: flex;">
+        <div id="user-container">
+            <h3>Online Users</h3>
+            <ul id="user-list"></ul>
+        </div>
+        <div id="chat-container">
+            <h3>Chat</h3>
+            <div id="chat-box"></div>
+            <input type="text" id="message" placeholder="Type a message">
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
 
     <script>
         const socket = new WebSocket("ws://localhost:5000");
+        let currentUser = "";
+        let selectedUser = "";
 
-        socket.onmessage = (event) => {
-            const chatBox = document.getElementById("chat-box");
-            chatBox.innerHTML += `<p>${event.data}</p>`;
-            chatBox.scrollTop = chatBox.scrollHeight;
+        socket.onopen = () => {
+            console.log("WebSocket connected.");
         };
 
-        function sendMessage() {
-            const username = document.getElementById("username").value.trim();
-            const message = document.getElementById("message").value.trim();
-            if (username && message) {
-                socket.send(`${username}: ${message}`);
-                document.getElementById("message").value = "";
+        socket.onmessage = (event) => {
+            const data = JSON.parse(event.data);
+
+            if (data.type === "user_list") {
+                const userList = document.getElementById("user-list");
+                userList.innerHTML = "";
+                data.users.forEach(user => {
+                    if (user !== currentUser) {
+                        const li = document.createElement("li");
+                        li.innerText = user;
+                        li.classList.add("user-item");
+                        li.onclick = () => selectUser(user);
+                        userList.appendChild(li);
+                    }
+                });
+            } else if (data.sender && data.content) {
+                const chatBox = document.getElementById("chat-box");
+                chatBox.innerHTML += `<p><b>${data.sender}:</b> ${data.content}</p>`;
+                chatBox.scrollTop = chatBox.scrollHeight;
             }
+        };
+
+        function setUsername() {
+            const usernameInput = document.getElementById("username").value.trim();
+            if (!usernameInput) return alert("Please enter a username.");
+
+            currentUser = usernameInput;
+            socket.send(JSON.stringify({ type: "set_username", username: currentUser }));
+        }
+
+        function selectUser(user) {
+            selectedUser = user;
+            alert(`Chatting with ${selectedUser}`);
+        }
+
+        function sendMessage() {
+            const messageInput = document.getElementById("message").value.trim();
+            if (!messageInput || !selectedUser) return alert("Select a user and type a message.");
+
+            socket.send(JSON.stringify({
+                type: "message",
+                sender: currentUser,
+                receiver: selectedUser,
+                content: messageInput
+            }));
+            document.getElementById("message").value = "";
         }
     </script>
-
 </body>
 </html>
